# django_serverless_demo

./: Makefile  README.md  manage.py  pyproject.toml  serverless.yml
django_serverless_demo/: asgi.py  lambda.py  settings.py  urls.py  wsgi.py
